--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,4 @@ env:
 before_script:
   - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
   - unzip -q play-${PLAY_VERSION}.zip
-script: 
-  - play-${PLAY_VERSION}/play test
-  - curl -3 http://localhost:9000/@tests
+script: play-${PLAY_VERSION}/play auto-test
