--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,7 @@ date.format=yyyy-MM-dd
 # application.log=INFO
 #
 # More logging configuration
-# application.log.path=/log4j.properties
+application.log.path=/log4j.properties
 # application.log.system.out=off
 
 # Database configuration
@@ -210,8 +210,8 @@ mail.smtp=mock
 # Testing. Set up a custom configuration for test mode
 # ~~~~~
 #%test.module.cobertura=${play.path}/modules/cobertura
-%test.application.mode=dev
-%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
-%test.jpa.ddl=create
-%test.mail.smtp=mock
+#%test.application.mode=dev
+#%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+#%test.jpa.ddl=create
+#%test.mail.smtp=mock
 
